# wh-op-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  test_api.py
analytics/: Dockerfile  pyproject.toml  requirements.txt
analytics/data/: results.db
analytics/src/: config.py  main.py
analytics/src/db/: mysql_client.py  sqlite_client.py
analytics/src/models/: schemas.py
analytics/src/routers/: baseline.py  health.py  impact.py
analytics/src/services/: baseline_service.py  correlation.py  daily_metrics.py  impact_service.py
analytics/src/tasks/: scheduler.py
backend/: pom.xml
backend/src/main/java/com/kejie/whop/: WhOpApplication.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/migration/: V1__add_indexes.sql
docs/data_analysis_reports/: 仓库类型划分与日均费用基线分析.md  科捷仓内操作费用基线分析报告.md
docs/data_profiling_reports/: 上架单明细表.md  上架单表.md  仓位信息表.md  仓位库存信息表.md  入库单行明细表.md  入库单表.md  出勤统计表.md  出库单表.md  在账资产明细表.md  复核操作表.md  工作量统计信息表.md  工作量统计操作明细表.md  库内移动导出表.md  报价信息表.md  拣货操作明细表.md  拣货操作表.md  物料基本信息表.md  租赁资产库存导出表.md  退货信息表.md
docs/scripts/: cost_analysis.py  db_profile_script.py  warehouse_type_analysis.py
frontend/: components.d.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/api/: index.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/plugins/: echarts.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts
frontend/src/types/: api.ts
frontend/src/views/: BaselineView.vue  DashboardView.vue  EstimateView.vue  ImpactView.vue  ReportView.vue
(+68 files in other folders)
