[project]
name = "wh-op-analytics"
version = "0.1.0"
description = "科捷仓内操作费用基线分析服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pymysql>=1.1.0",
    "pydantic-settings>=2.7.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000"
